--- a/Todo.txt
+++ b/Todo.txt
@@ -1,2 +1,3 @@
 1. It can predict mutiple output but the result is very bad
 2. It is very good to predict one output
+3. If not scale and not including column 23 and 27 the result is good (0.02)
